<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utama.Register"
    android:fitsSystemWindows="true"
    android:background="@drawable/tampilan_full">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign"
            android:textSize="38sp"
            android:textColor="@color/birumuda"
            android:fontFamily="@font/poppins_bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Up"
            android:textSize="38sp"
            android:textColor="@color/oren"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginLeft="5dp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/shape_lurus"
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="vertical">



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/birudongker"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/hitam"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameregister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:backgroundTint="@color/birudongker"
                        android:textSize="16sp"
                        android:textColor="@color/hitam"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/birudongker"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/hitam"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailregister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:backgroundTint="@color/birudongker"
                        android:textSize="16sp"
                        android:textColor="@color/hitam"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/birudongker"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/oren"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/hitam"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordregister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:backgroundTint="@color/birudongker"
                        android:textSize="16sp"
                        android:textColor="@color/hitam"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/birudongker"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/oren"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/hitam"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmpasswordregister"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:backgroundTint="@color/birudongker"
                        android:textSize="16sp"
                        android:textColor="@color/hitam"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonsignupregister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="60dp"
                    android:fontFamily="@font/poppins_bold"
                    android:background="@drawable/tombol_birudongker"
                    android:text="@string/sign_up"
                    android:textColor="@color/putih"
                    android:textSize="16sp">

                </Button>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:fontFamily="@font/poppins_semi"
                    android:textColor="@color/hitam"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal">

                </TextView>

                <Button
                    android:id="@+id/buttonloginregister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="70dp"
                    android:fontFamily="@font/poppins_bold"
                    android:background="@drawable/tombol_oren"
                    android:text="@string/login"
                    android:textColor="@color/putih"
                    android:textSize="16sp">

                </Button>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>